--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="keywords" content="​​We Are Increasing Business Success With&nbsp;IT Solution, ​We advise leaders on strategy, marketing, organization and IT, ​Ready to get started?">
     <meta name="description" content="">
-    <title>Home</title>
+    <title>IT Services</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
 <link rel="stylesheet" href="index.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery-1.9.1.min.js" defer=""></script>
